update journey blurb

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ header:
 #    - label: "Book Coaching"
 #      url: "https://TODO"
 # excerpt: "A professional skydiving team based at Skydive Arizona."
-excerpt: "We're a professional skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). Our 25 year legacy includes 7 World Championships in 4-way and 8-way Formation Skydiving. Join us on our journey to Worlds 2020!"
+excerpt: "We're a professional skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). Our 25 year legacy includes 7 World Championships in 4-way and 8-way Formation Skydiving. Join us on our journey!"
 
 intro:
-  - excerpt: 'We are a professional formation skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). The team has earned 7 World Championsihps in 4-way and 8-way Formation Skydiving since its inception in 1994. Join us on our journey to Worlds 2020!'
+  - excerpt: 'We are a professional formation skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). The team has earned 7 World Championsihps in 4-way and 8-way Formation Skydiving since its inception in 1994. Join us on our journey!'
 
 
 links:
