Update photo for Firebird

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: "Arizona Airspeed"
 layout: splash
 header:
-  overlay_image: /assets/images/test-splash3.jpg
+  overlay_image: /assets/images/splash4.jpg
   # overlay_image: /assets/images/DSC04426.jpg
   #overlay_image: /assets/images/logo-large.png
   overlay_color: "#000"
