update video link and buttons

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@ header:
   #overlay_filter: "0.5"
   actions:
     - label: See us in Action
-      url: "https://www.facebook.com/ArizonaAirspeed/videos/302329460363428/"
-    - label: "Follow us on Facebook"
-      url: "https://facebook.com/ArizonaAirspeed"
+      url: "https://www.instagram.com/p/CWEePoWJI7T/"
     - label: "Follow us on Instagram"
       url: "https://instagram.com/arizonaairspeed"
+    - label: "Follow us on Facebook"
+      url: "https://facebook.com/ArizonaAirspeed"
 #    - label: "Book Coaching"
 #      url: "https://TODO"
 # excerpt: "A professional skydiving team based at Skydive Arizona."
-excerpt: "We're a professional skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). Our 25 year legacy includes 7 World Championships in 4-way and 8-way Formation Skydiving. Join us on our journey!"
+excerpt: "We're a professional skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). Our 28 year legacy includes 8 World Championships in 4-way and 8-way Formation Skydiving. Join us on our journey!"
 
 intro:
-  - excerpt: 'We are a professional formation skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). The team has earned 7 World Championsihps in 4-way and 8-way Formation Skydiving since its inception in 1994. Join us on our journey!'
+  - excerpt: 'We are a professional formation skydiving team based at [Skydive Arizona](https://www.skydiveaz.com). The team has earned 8 World Championsihps in 4-way and 8-way Formation Skydiving since its inception in 1993. Join us on our journey!'
 
 
 links:
