add newsletter link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ header:
   actions:
     - label: See us in Action
       url: "https://www.instagram.com/p/CWEePoWJI7T/"
+    - label: "Subscribe to our Newsletter"
+      url: "http://eepurl.com/hRLaaP"
     - label: "Follow us on Instagram"
       url: "https://instagram.com/arizonaairspeed"
     - label: "Follow us on Facebook"
